<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/beranda" />

    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/ic_akun"
        android:title="@string/akun" />

    <item
        android:id="@+id/navigation_kasir"
        android:icon="@drawable/ic_kasir"
        android:title="@string/kasir"
        />

    <item
        android:id="@+id/navigation_transaksi"
        android:icon="@drawable/ic_transaksi"
        android:title="@string/transaksi" />

    <item
        android:id="@+id/navigation_laporan"
        android:icon="@drawable/ic_laporan"
        android:title="@string/laporan" />
</menu>
