<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_handle_strip" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tambah_kategori"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginBottom="16dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"
                android:layout_marginBottom="8dp" />


            <!-- Selection Input -->
            <TextView
                android:id="@+id/tvSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kategori"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorPrimaryText" />


            <EditText
                android:id="@+id/etSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:gravity="top"
                android:hint="@string/masukkan_nama"
                android:inputType="text"
                android:lines="1"
                android:padding="12dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText" />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSimpan"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/simpan"
                    android:textColor="@color/colorOnPrimary"
                    app:backgroundTint="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>